--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 body{
     background-color: #5FFBF1;
-    grid-template-columns: 10% 80%;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas: 
-    "nav nav nav"
-    "h3 h1 h3"
-    "footer footer footer";
-}
+    display: flexbox;
 
+}
+aside{
+    flex-direction: column;
+    margin-left: 90%;
+    position: absolute;
+
+}
 
 #selection {
     background-color: #8d6bfb;
@@ -22,6 +23,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-direction: row;
     align-items: center;
 
 }
@@ -30,6 +32,7 @@ body{
 }
 #name ,#title, p{
     text-align: center;
+
 }
 
 p{
@@ -41,14 +44,13 @@ p{
 #icons{
     max-width: 55px;
     border: 0px;
-    margin: 20px 0;
+    margin: 2px 0;
     
 }
 
 #html{
     width: 55px;
     padding: 10px;
-
     background-image: radial-gradient(circle, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
     border-radius: 80px;
 }
