--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,15 @@
 body{
     background-color: #5FFBF1;
-    display: flexbox;
-
+    
 }
+
 aside{
     flex-direction: column;
     margin-left: 90%;
     position: absolute;
+    bottom:290px
 
 }
-
 #selection {
     background-color: #8d6bfb;
     
@@ -25,18 +25,19 @@ aside{
     justify-content: space-evenly;
     flex-direction: row;
     align-items: center;
-
+    
 }
 #info{
     border-color: #fbfbfb;
 }
 #name ,#title, p{
+    flex-direction: column;
     text-align: center;
-
 }
 
-p{
 
+p{
+    
     margin: auto;
     max-width: 30%;
 }
@@ -59,5 +60,17 @@ p{
     width: 50px;
     border-radius: 60px;
     background-image: radial-gradient(circle, #ffffff, #ffffff, #ffffff, #fbf9ff, #f7f7ff, #fcfdff, #fbfbfb, #aaddff, #72d8fc, #28d7fa, #46eefa, #5ffbf1);
+    
+}
+.projects{
+    text-align: center;
+    position: relative;
 
+}
+footer{
+    margin-bottom: 0;
+    background-color: #8d6bfb;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
 }
