--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,9 @@ footer{
     flex-direction: row;
     align-items: center;
 }
+#resume{
+    max-width: 55px;
+    border-radius: 60px;
+    align-items: flex-start;
+    list-style: none
+}
