--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,14 @@ p{
     margin: auto;
     max-width: 30%;
 }
+#skill-list{
+    text-align: center;
+    border-bottom:solid #41b3ff;
+}
 .icons{
     display: flex;
     flex-direction: row;
+    justify-content: center;
 
 }
 
