--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@ body.dark{
 aside{
     flex-direction: column;
     position: static;
-    margin-left: 88%;
+    margin-left: 80%;
+    min-width: 20px;
+    max-width: 50px;
     
     
 }
@@ -132,11 +134,12 @@ button{
 }
 
 #resume{
+    min-width: none;
     max-width: 50px;
     border-radius: 60px;
     padding: 10px;
     background-image: radial-gradient(circle, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
-
+    margin-right:70%:
 }
 #github{
     width: 90px;
